[gd_scene load_steps=9 format=2]

[ext_resource path="res://gameplay/railtrack/railtrack.gd" type="Script" id=1]
[ext_resource path="res://gameplay/railtrack/states/selection.gd" type="Script" id=2]
[ext_resource path="res://gameplay/railtrack/states/node_selected.gd" type="Script" id=3]
[ext_resource path="res://gameplay/railtrack/states/edge_selected.gd" type="Script" id=4]
[ext_resource path="res://gameplay/remove_button/remove_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://gameplay/path/path.tscn" type="PackedScene" id=6]
[ext_resource path="res://gameplay/railtrack/state_machine.gd" type="Script" id=7]
[ext_resource path="res://gameplay/railtrack/forbidden_vertex/forbidden_vertex.tscn" type="PackedScene" id=8]

[node name="railtrack" type="Node2D"]
script = ExtResource( 1 )

[node name="path" parent="." instance=ExtResource( 6 )]

[node name="state_machine" type="Node" parent="."]
script = ExtResource( 7 )

[node name="selection" type="Node" parent="state_machine"]
script = ExtResource( 2 )

[node name="node_selected" type="Node" parent="state_machine"]
script = ExtResource( 3 )

[node name="remove_button" parent="state_machine/node_selected" instance=ExtResource( 5 )]
visible = false

[node name="edge_selected" type="Node2D" parent="state_machine"]
script = ExtResource( 4 )

[node name="forbidden_vertex" parent="state_machine/edge_selected" instance=ExtResource( 8 )]
[connection signal="cancelled" from="state_machine/node_selected/remove_button" to="state_machine/node_selected" method="_on_remove_button_cancelled"]
[connection signal="confirmed" from="state_machine/node_selected/remove_button" to="state_machine/node_selected" method="_on_remove_button_confirmed"]
